
	Building man-db now requires a C99 compiler.

	Building man-db now requires Autoconf >= 2.64.

	Fixes:
	------

	* Manpath deduplication no longer mishandles the case where another
	  entry in the manpath is a suffix of a candidate path to append.

	* Fix potential crash in path searching if getcwd fails for reasons
	  other than running out of memory.

man-db 2.9.4 (8 February 2021)
==============================

Major changes since man-db 2.9.3:

	Improvements:
	-------------

	* Recognise Romanian translations of the NAME section.

	* Treat "\[en]" (etc.) as another synonym for "\-" in NAME sections,
	  alongside the existing "\(en" (etc.).

	Fixes:
	------

	* Make the seccomp sandbox work better with libcs such as musl (S.
	  Gilles).

	* Make the seccomp sandbox allow clock_gettime64 as well as
	  clock_gettime (S. Gilles).

man-db 2.9.3 (22 June 2020)
===========================

Major changes since man-db 2.9.2:

	Fixes:
	------

	* Fix manual page translation infrastructure to compare po4a versions
	  with more than two components correctly.

	* Avoid incorrect markup in man(1) with po4a >= 0.58.

man-db 2.9.2 (1 June 2020)
==========================

Major changes since man-db 2.9.1:

	Fixes:
	------

	* Fix "man -X75-12" and "man -X100-12" to set the document font size
	  (using "-rS12") as well as the device (using "-TX75-12" or
	  "-TX100-12").

	* Fix incompatibility of "man -X" and friends with the seccomp
	  sandbox.

	Improvements:
	-------------

	* Add a bug tracker link to man-db's own manual pages.

	* Add support for zstd-compressed manual pages, thanks to Bernhard
	  Rosenkränzer.

man-db 2.9.1 (25 February 2020)
===============================

Major changes since man-db 2.9.0:

	Improvements:
	-------------

	* Drop fdutimens patch for GNU/Hurd; the bug it was working around
	  was fixed in glibc 2.28.

	* Add MANDB_MAP entry mapping /snap/man to /var/cache/man/snap.

man-db 2.9.0 (23 October 2019)
==============================
