@@ -18,6 +18,9 @@ Major changes since man-db 2.9.4:
 	* Fix potential crash in path searching if getcwd fails for reasons
 	  other than running out of memory.
 
+	* Fix crash in "globbing" test tool if run with no non-option
+	  arguments.
+
 man-db 2.9.4 (8 February 2021)
 ==============================
 
